# sandbox

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cpp-utils/: .gitignore  .travis.yml  CMakeLists.txt  README.md
cpp-utils/include/: bytearray.hpp  bytes.hpp  codecs.hpp  fast_hash.hpp  stl_io.hpp  toolbox.hpp  type_traits.hpp
cpp-utils/test/: bytearray_tests.cpp  bytes_tests.cpp  codecs_tests.cpp  codecs_tests.cpp.cpp  fast_hash_tests.cpp  stl_io_tests.cpp  toolbox_tests.cpp
linear-hash/: CMakeLists.txt  README.md  linear-hash
linear-hash/include/: linear-hash-LH.hpp  linear-hash-LH1.hpp  linear-hash-PS.hpp  linear-hash-PS1.hpp  linear-hash-PS2.hpp  linear-hash.hpp
linear-hash/test/: main.cpp
open-addressing/: .gitignore  .travis.yml  CMakeLists.txt  README.md
open-addressing/include/: open_table.hpp
open-addressing/test/: main.cpp
perfect-hash/: .gitignore  .travis.yml  CMakeLists.txt  README.md
perfect-hash/test/: main.cpp
